--- a/k9mail/src/main/res/layout/message_list_item.xml
+++ b/k9mail/src/main/res/layout/message_list_item.xml
@@ -129,7 +129,7 @@
                 />
         </LinearLayout>
 
-        <CheckBox
+        <android.support.v7.widget.AppCompatCheckBox
             android:id="@+id/flagged_center_right"
             style="?android:attr/starStyle"
             android:layout_width="wrap_content"
@@ -156,9 +156,9 @@
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:textColor="?android:attr/textColorSecondary"/>
 
-        <CheckBox
+        <android.support.v7.widget.AppCompatCheckBox
             android:id="@+id/flagged_bottom_right"
-            style="?android:attr/starStyle"
+            style="@style/Theme.K9.Light.Base.Star"
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
             android:layout_alignParentRight="true"
