--- a/k9mail/src/main/res/layout/message_view_header.xml
+++ b/k9mail/src/main/res/layout/message_view_header.xml
@@ -191,12 +191,12 @@
                         android:id="@+id/status_icon_strip"
                         >
 
-                        <CheckBox
+                        <android.support.v7.widget.AppCompatCheckBox
                             android:id="@+id/flagged"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:focusable="false"
-                            style="?android:attr/starStyle"
+                            style="@style/Theme.K9.Light.Base.StarLarge"
                             android:checked="false" />
 
                         <include layout="@layout/message_crypto_status_view" />
