Make back from message view animation a bit snappier

--- a/k9mail/src/main/res/anim/slide_in_right.xml
+++ b/k9mail/src/main/res/anim/slide_in_right.xml
@@ -2,12 +2,12 @@
 
     <!--message enter message-->
     <translate
-        android:duration="@android:integer/config_mediumAnimTime"
+        android:duration="400"
         android:fromYDelta="5%p"
     android:toYDelta="0%p"
     />
     <alpha
-        android:duration="@android:integer/config_mediumAnimTime"
+        android:duration="400"
         android:fromAlpha="0.0"
         android:toAlpha="1.0"/>
 
