--- a/k9mail/src/main/res/anim/slide_out_left.xml
+++ b/k9mail/src/main/res/anim/slide_out_left.xml
@@ -2,7 +2,7 @@
 
     <!--message list when entering message-->
     <translate
-        android:duration="@android:integer/config_mediumAnimTime"
+        android:duration="400"
         android:fromYDelta="0%p"
         android:toYDelta="0%p"
         />
