--- a/k9mail/src/main/res/values/constants.xml
+++ b/k9mail/src/main/res/values/constants.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <string name="app_revision_url">https://github.com/k9mail/k-9/wiki/ReleaseNotes</string>
-    <string name="app_webpage_url">https://k9mail.github.io/</string>
+    <string name="app_revision_url">https://github.com/G00fY2/k-9_material_design/releases</string>
+    <string name="app_webpage_url">https://github.com/G00fY2/k-9_material_design</string>
     <string name="message_header_mua">K-9 Mail for Android</string>
 
     <!-- Licenses - translating legal stuff should be left to experts -->
