--- a/k9mail/src/main/res/xml/changelog_master.xml
+++ b/k9mail/src/main/res/xml/changelog_master.xml
@@ -134,7 +134,7 @@
         <change>Improved compatibility with IMAP (proxy) servers</change>
         <change>Improved support for non-standard conform "share" functionality used by some apps</change>
         <change>Another attempt at working around the display bug on Asus Transformer devices</change>
-        <change>Added mailbox.org to the list of providers﻿</change>
+        <change>Added mailbox.org to the list of providers</change>
         <change>More bug fixes</change>
     </release>
     <release version="4.803" versioncode="20004" >
